attempt to fix background overflow on mobile

--- a/src/components/desktop/styles.module.css
+++ b/src/components/desktop/styles.module.css
@@ -1,7 +1,7 @@
 .background {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-size: cover;
 }
 .desktop {
